--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8">
     <title>Bar Chart</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <script src="jquery-3.5.1.min.js"></script>
+    <script src="/home/jordan/lighthouse/bar-chart/bar-chart.js"></script>
+    <script src="jquery-3.6.0.js"></script>
   </head>
   <body>
   <header>
     <h1>Bar Chart</h1>
   </header>
-    <div id="bar-chart" class="chart">
-      <div class="bar"></div>
-      <div class="bar" style="left: 100px; height: 200px; top: 295px"></div>
-      
-    </div>   
+    <div id="bar-chart" class="chart"></div>   
+    <button id="generate-chart" onclick="generateBarChart([1,2,3,4,5,6,7,8,9,10])">Generate Chart</button>
   </body>
 </html>
