--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Bar Chart</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <script src="/home/jordan/lighthouse/bar-chart/bar-chart.js"></script>
+    <script src="bar-chart.js"></script>
     <script src="jquery-3.6.0.js"></script>
   </head>
   <body>
