--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="utf-8">
     <title>Bar Chart</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <script src="bar-chart.js"></script>
     <script src="jquery-3.6.0.js"></script>
+    <script src="bar-chart.js"></script>
   </head>
   <body>
-  <header>
-    <h1>Bar Chart</h1>
-  </header>
-    <div id="bar-chart" class="chart"></div>   
-    <button id="generate-chart" onclick="generateBarChart([1,2,3,4,5,6,7,8,9,10])">Generate Chart</button>
+    <header>
+      <h1>Bar Chart</h1>
+    </header>
+    <figure id="bar-chart" class="chart"></figure>
+    <input class="color-picker" type="hidden" id="bar-color" name="bar-color">
+    <button id="generate-chart" onclick="generateBarChart([1,2,3,4,5], [500,500])">Generate Chart</button>
+    <form id="bar-options">
+      <label for="y-axis">y-axis size (in px): </label>
+      <input type="text" id="y-axis" name="y-axis" class="input"><br>
+      <label for="x-axis">x-axis size (in px): </label>
+      <input type="text" id="x-axis" name="x-axis" class="input"><br>
+    </form>
   </body>
 </html>
